basic form and welcome page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <h1>Signup</h1>
-        <form method="post">
+        <form action="/add" method="post">
             <table>
                 <tr>
                     <td><label for="username">Username</label></td>
