--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-    <h1>Welcome, [username]!</h1>
+    <h1>Welcome, {{ username }}!</h1>
     </body>
 </html>
