--- a/templates/index.html
+++ b/templates/index.html
@@ -11,20 +11,22 @@
     </head>
     <body>
     <h1>Signup</h1>
-        <form action="/add" method="post">
+        <form action="/welcome" method="post">
             <table>
                 <tr>
                     <td><label for="username">Username</label></td>
                     <td>
-                        <input name="username" type="text" value="">
-                        <span class="error"></span>
+                        <input id="username" name="username" type="text" value="{{username}}">
+                        <span class="error">{{usernameError}}</span>
                     </td>
                 </tr>
                 <tr>
                     <td><label for="password">Password</label></td>
                     <td>
                         <input name="password" type="password">
-                        <span class="error"></span>
+
+                        <span class="error">{{ error }}</span>
+                        
                     </td>
                 </tr>
                 <tr>
